<resources>
    <string name="app_name">Akıllı Ev(proje)</string>
    <string name="record">Record</string>
    <string name="more">more</string>
    <string name="kontrol_paneli">Kontrol Paneli</string>
    <string name="ba_l_de_il">bağlı değil</string>
    <string name="ba_lant_durumu">bağlantı durumu</string>
    <string name="durum">durum:</string>
    <string name="c">°C</string>
    <string name="_25_c">25°C</string>
    <string name="k">ışık</string>
    <string name="daha">daha</string>
    <string name="daha_fazla">daha fazla</string>
    <string name="ya_mur">yağmur</string>
    <string name="durum_kontrol">Durum Kontrol</string>
    <string name="w">5 lamba aktif</string>
    <string name="aktif_lamba_say_s">Aktif lamba sayısı</string>
    <string name="oturma_odas">oturma odası</string>
    <string name="perde">5 perde kapalı</string>
    <string name="kapaliperdesay">kapalı perde sayısı</string>
    <string name="oturma_odas_mutfak">oturma odası , mutfak</string>
    <string name="kapali">Kapalı</string>
    <string name="cati_durumu">Çatı durumu</string>
    <string name="_200">200</string>
    <string name="_100">100</string>
    <string name="mutfak_lamba">Mutfak Lamba</string>
    <string name="mutfak">Mutfak</string>
    <string name="yatak_odas_lamba">Yatak Odası lamba</string>
    <string name="yatak_odas">Yatak odası</string>
    <string name="aktif">aktif</string>
    <string name="oturma_odas_lamba">Oturma Odası Lamba</string>
    <string name="_3_lamba_aktif">3 lamba aktif</string>
    <string name="a_k">açık</string>
    <string name="birpacik">1 perde açık</string>
    <string name="ikipacik">2 perde açık</string>
    <string name="ucpacik">3 perde açık</string>
    <string name="birkacik">1 kepenk açık</string>
    <string name="ikikacik">2 kepenk açık</string>
    <string name="uckacik">3 kepenk açık</string>
    <string name="sifirlacik">0 lamba açık</string>
    <string name="birlacik">1 lamba açık</string>
    <string name="ikilacik">2 lamba açık</string>
    <string name="uclacik">3 lamba açık</string>
    <string name="aktiflamba">lamba aktif</string>
    <string name="data">""</string>
    <string name="salon">Salon</string>
    <string name="kapal_perdeler">Kapalı perdeler</string>
    <string name="kapal_kepenkler">Kapalı kepenkler</string>
    <string name="garaj_lamba">Garaj Lamba</string>
    <string name="garaj">Garaj</string>
    <string name="tuvalet_lambas">Tuvalet Lambası</string>
    <string name="tuvalet">Tuvalet</string>
    <string name="tire">-</string>
    <string name="cocukodasi">Çocuk Odası</string>
    <string name="cocukodasilamba">Çocuk Odasının Lambası</string>
    <string name="ev_i_ardak">Ev İçi Çardak</string>
    <string name="koridor">Koridor</string>
</resources>