<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bulb_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/_50ssp"
        android:layout_height="@dimen/_50ssp"
        app:cardBackgroundColor="@color/dashboard_item_1"
        app:cardCornerRadius="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/bulb_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bulb"
            app:tint="@color/white" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/_14ssp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:paddingStart="@dimen/_40sdp"
            android:paddingTop="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingBottom="@dimen/_16sdp">
            <TextView
                android:id="@+id/textTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/aktif_lamba_say_s"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageLocation"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:src="@drawable/ic_location"
                app:layout_constraintStart_toStartOf="@+id/textTitle"
                app:layout_constraintTop_toBottomOf="@+id/textTitle"
                android:visibility="visible"/>
            <LinearLayout
                android:id="@+id/container_layout1"
                android:layout_width="400dp"
                android:layout_height="20dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/imageLocation"
                app:layout_constraintStart_toEndOf="@+id/imageLocation"
                app:layout_constraintTop_toBottomOf="@+id/imageLocation" >
                <TextView
                    android:id="@+id/textLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salon"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp"
                    android:visibility="gone"/>
                <Space
                    android:layout_width="@dimen/_5ssp"
                    android:layout_height="wrap_content"
                    android:visibility="visible"/>
                <TextView
                    android:id="@+id/textLocation1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mutfak"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp"
                    android:visibility="gone"/>
                <Space
                    android:layout_width="@dimen/_5ssp"
                    android:layout_height="wrap_content"
                    android:visibility="visible"/>
                <TextView
                    android:id="@+id/textLocation2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yatak_odas"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp"
                    android:visibility="gone"/>
                <Space
                    android:layout_width="@dimen/_5ssp"
                    android:layout_height="wrap_content"
                    android:visibility="visible"/>
                <TextView
                    android:id="@+id/textLocation3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ev_i_ardak"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp"
                    android:visibility="gone"/>
                <Space
                    android:layout_width="@dimen/_5ssp"
                    android:layout_height="wrap_content"
                    android:visibility="visible"/>
                <TextView
                    android:id="@+id/textLocation4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/garaj"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp"
                    android:visibility="gone"/>
                <Space
                    android:layout_width="@dimen/_5ssp"
                    android:layout_height="wrap_content"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/textLocation5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/koridor"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp"
                    android:visibility="gone"/>
                <Space
                    android:layout_width="@dimen/_5ssp"
                    android:layout_height="wrap_content"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/textLocation6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tuvalet"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp"
                    android:visibility="gone"/>
                <Space
                    android:layout_width="@dimen/_5ssp"
                    android:layout_height="wrap_content"
                    android:visibility="visible"/>

                <TextView
                    android:id="@+id/textLocation7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cocukodasi"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/_10ssp"
                    android:visibility="gone"/>
            </LinearLayout>




        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/buttonled"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/back"
            android:visibility="visible"
             />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>