<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_16sdp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/_50ssp"
        android:layout_height="@dimen/_50ssp"
        app:cardBackgroundColor="@color/dashboard_item_4"
        app:cardCornerRadius="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:contextClickable="true"
            android:src="@drawable/panel"
            app:tint="@color/white" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="@dimen/_14ssp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:paddingStart="@dimen/_40sdp"
            android:paddingTop="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingBottom="@dimen/_16sdp">

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/kapal_kepenkler"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageLocation"
                android:layout_width="@dimen/_12sdp"
                android:layout_height="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:src="@drawable/ic_location"
                app:layout_constraintStart_toStartOf="@+id/textTitle"
                app:layout_constraintTop_toBottomOf="@+id/textTitle" />
                <LinearLayout
                    android:id="@+id/container_layout"
                    android:layout_width="400dp"
                    android:layout_height="20dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="@+id/imageLocation"
                    app:layout_constraintStart_toEndOf="@+id/imageLocation"
                    app:layout_constraintTop_toTopOf="@+id/imageLocation">

                    <Space
                        android:layout_width="@dimen/_10ssp"
                        android:layout_height="wrap_content"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/textLocationk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/garaj"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/_10ssp"
                        android:visibility="gone" />

                    <Space
                        android:layout_width="@dimen/_10ssp"
                        android:layout_height="wrap_content"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/textLocation1k"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/salon"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/_10ssp"
                        android:visibility="gone" />

                    <Space
                        android:layout_width="@dimen/_10ssp"
                        android:layout_height="wrap_content"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/textLocation2k"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yatak_odas"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/_10ssp"
                        android:visibility="gone" />

                    <Space
                        android:layout_width="@dimen/_10ssp"
                        android:layout_height="wrap_content"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/textLocation3k"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ev_i_ardak"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/_10ssp"
                        android:visibility="gone" />

                    <Space
                        android:layout_width="@dimen/_10ssp"
                        android:layout_height="wrap_content"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/textLocation4k"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mutfak"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/_10ssp"
                        android:visibility="gone" />

                    <Space
                        android:layout_width="@dimen/_10ssp"
                        android:layout_height="wrap_content"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/textLocation5k"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cocukodasi"
                        android:textColor="@color/secondary_text"
                        android:textSize="@dimen/_10ssp"
                        android:visibility="gone" />


                </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
        <Button
            android:id="@+id/buttonkepenk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/back"
            android:visibility="visible" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>